--- a/public/global.css
+++ b/public/global.css
@@ -1,35 +1,84 @@
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,500;1,100;1,200;1,300;1,400;1,500&display=swap');
+
+/*Major default settings for root elements of the page*/
+:root {
+	--headline-font-size: 32px;
+	--subheadline-font-size: 24px;
+	--text-font-size: 16px;
+
+	--background-color: #000812;
+	--text-color: #fff;
+
+}
+
+
+html {
+	scroll-behavior: smooth;
+
+	/* Hide the overflow of the page because of a bug where the page randomly showed a vertical
+		Scrollbar every other reload...
+	*/
+	overflow-x: hidden;
+
+	font-family: "Raleway", sans-serif;
+	font-weight: 300;
+	background-color: var(--background-color);
+	color: var(--text-color);
 }
 
 body {
-	color: #333;
-	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	margin: 0px;
 }
 
+
+/* Restyling the disgusting default links with some stylish animation I stole on the Internet */
 a {
-	color: rgb(0,100,200);
+	color: var(--text-color);
+	text-decoration: none;
+	overflow: hidden;
+
+	display: block;
+	position: relative;
+}
+
+a::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 1px;
+	background-color: var(--text-color);
+	transition: transform 300ms;
+
+	transform: translate3d(-100%, 0, 0);
+	opacity: 1;
+}
+
+a:hover::after,
+a:focus::after {
+	transform: translate3d(0, 0, 0);
+}
+
+
+a:hover {
 	text-decoration: none;
 }
 
-a:hover {
-	text-decoration: underline;
-}
-
 a:visited {
-	color: rgb(0,80,160);
+	color: var(--text-color);
 }
 
+
+/* premade settings from svelte */
 label {
 	display: block;
 }
 
-input, button, select, textarea {
+input,
+button,
+select,
+textarea {
 	font-family: inherit;
 	font-size: inherit;
 	-webkit-padding: 0.4em 0;
