--- a/public/global.css
+++ b/public/global.css
@@ -9,14 +9,16 @@
 
 	--background-color: #000812;
 	--text-color: #fff;
+
+	box-sizing: border-box;
 }
 
 @media only screen and (max-width: 800px) {
 
 	:root {
 		--title-font-size: 46px;
-		--headline-font-size: 30px;
-		--subheadline-font-size: 24px;
+		--headline-font-size: 26px;
+		--subheadline-font-size: 20px;
 		--text-font-size: 16px;
 	}
 
