Working on the Image Slide
Implementing Controls and fading animations
New global variables for colors

--- a/public/global.css
+++ b/public/global.css
@@ -8,7 +8,9 @@
 	--text-font-size: 16px;
 
 	--background-color: #000812;
+	--secondary-background-color: #334047;
 	--text-color: #fff;
+	--secondary-text-color: #cdcdd0;
 
 	box-sizing: border-box;
 }
