--- a/public/global.css
+++ b/public/global.css
@@ -6,6 +6,7 @@
 	--headline-font-size: 32px;
 	--subheadline-font-size: 24px;
 	--text-font-size: 16px;
+	--minor-font-size: 12px;
 
 	--background-color: #000812;
 	--secondary-background-color: #0e3144;
